<resources>
    <string name="app_name">Festivality</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_up_to_the_minute_updates">Get Up-to-the-minute updates.</string>
    <string name="allow_festival_to_send_you_important_notifications_like_program_changes_schedule_and_venue_updates">Allow festival to send you important notifications like program changes, schedule and venue updates.</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="skip">Skip</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="enable_smart_location_awareness_to_work_for_you">Enable Smart Location Awareness to work for you.</string>
    <string name="get_guidance_and_utility_from_app_via_location_direction_navigation_and_helpful_on_site_notifications">Get guidance and utility from app via location direction, navigation and helpful on-site notifications</string>
    <string name="enable_location">Enable Location</string>
    <string name="start_using_the_app">Start using the app</string>
    <string name="get_started_now">Get started now!</string>
    <string name="press_again_to_exit">Press once again to exit</string>
    <string name="scroll_behavior" translatable="false">@string/appbar_scrolling_view_behavior</string>
    <string name="title_no_attendee">No Attendees found.</string>
    <string name="add_to_group">Add to group</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="follow_me">Follow Me</string>
    <string name="search_hint">enter name</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="sort">Sort</string>
    <string name="likes">Likes</string>
    <string name="share">Share</string>
    <string name="slug">Slug</string>
</resources>
