<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_bg"
    tools:context=".features.intro.view.fragments.LocationFragment">


    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/location_title_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/location_title_1"
        android:layout_width="317dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="@android:integer/config_longAnimTime"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/enable_smart_location_awareness_to_work_for_you"
        android:textColor="@color/text_color_intro_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location_title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_icon" />

    <TextView
        android:id="@+id/location_title_2"
        android:layout_width="259dp"
        android:layout_height="112dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/get_guidance_and_utility_from_app_via_location_direction_navigation_and_helpful_on_site_notifications"
        android:textColor="@color/text_color_intro_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/location_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_title_1" />

    <Button
        android:id="@+id/location_btn"
        android:layout_width="189dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttondrawable"
        android:text="@string/enable_location"
        android:textAllCaps="false"
        android:textColor="@color/text_color_intro_1"
        app:layout_constraintBottom_toTopOf="@+id/location_skip_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_title_2" />

    <Button
        android:id="@+id/location_skip_btn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/text_color_intro_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_btn" />
</android.support.constraint.ConstraintLayout>
