<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/intro_bg"
    app:layout_anchorGravity="center"
    tools:context=".features.intro.view.fragments.NotificationFragment">


    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/notification_title_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notification" />

    <TextView
        android:id="@+id/notification_title_1"
        android:layout_width="264dp"
        android:layout_height="69dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="@android:integer/config_longAnimTime"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/get_up_to_the_minute_updates"
        android:textColor="@color/text_color_intro_1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/notification_title_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_icon" />

    <TextView
        android:id="@+id/notification_title_2"
        android:layout_width="282dp"
        android:layout_height="94dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/allow_festival_to_send_you_important_notifications_like_program_changes_schedule_and_venue_updates"
        android:textColor="@color/text_color_intro_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notification_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_title_1" />

    <Button
        android:id="@+id/notification_btn"
        android:layout_width="189dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttondrawable"
        android:text="@string/enable_notifications"
        android:textAllCaps="false"
        android:textColor="@color/text_color_intro_1"
        app:layout_constraintBottom_toTopOf="@+id/notification_skip_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_title_2" />

    <Button
        android:id="@+id/notification_skip_btn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/text_color_intro_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_btn" />


</android.support.constraint.ConstraintLayout>
